--- a/backend/vercel.json
+++ b/backend/vercel.json
@@ -5,8 +5,7 @@
     ],
     "routes": [
         {
-            "src": "/(.*)",
-            "dist": "/"
+            "src": "/(.*)"
         }
     ]
 }
